[package]
name = "rreplace"
version = "0.1.0"
authors = ["Brendan Copp <bcopp.oss@gmail.com>"]
edition = "2018"
description = "rreplace is a rust library designed to streamline string replacements. It can handle multiple unique replacements and iterates the string only once."

# These URLs point to more information about the package. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
# documentation = "..."
repository = "https://github.com/bcopp/rreplace"

# This points to a file under the package root (relative to this `Cargo.toml`).
# The contents of this file are stored and indexed in the registry.
# crates.io will render this file and place the result on the crate's page.
readme = "README.adoc"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["string", "replace", "substring", "multiple", "substitute"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["parsing", "text-processing"]

# This is an SPDX 2.1 license expression for this package. Currently
# crates.io will validate the license provided against a whitelist of
# known license and exception identifiers from the SPDX license list
# 2.4. Parentheses are not currently supported.
license = "MIT"

maintenance = { status = "actively-developed" }

[dependencies]
